--- a/views/allLandlords.handlebars
+++ b/views/allLandlords.handlebars
@@ -78,10 +78,10 @@
 
 {{#each landlords}}
 
-<div>
+<div class="propertylisting">
   <hr> 
   <h3>{{this.firstName}} {{this.lastName}}</h3>
-  <p>City: {{this.city}}, State: {{this.state}}</p>
+  <p>City: {{this.city}}</p> <p>State: {{this.state}}</p>
   <p>Email: {{this.email}}</p>
   
   <h4>Properties:</h4>
