--- a/views/trueAllProperties.handlebars
+++ b/views/trueAllProperties.handlebars
@@ -11,7 +11,7 @@
 
 {{#each properties}}
 
-<div>
+<div class="propertylisting">
   <hr> 
   <h3>{{this.propertyName}}</h3>
   <p>City: {{this.city}}, State: {{this.state}}</p>
